--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Kritik Modi</title>
+        <title>Gauri Prasad</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    Kritik Modi
+                    Gauri Prasad
                 </a>
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
@@ -85,9 +85,9 @@
                 <div class="home__container container grid section__border">
                     <div class="home__data grid">
                         <h1 class="home__title">
-                            Hi, I'm Kritik <br>
-                            Software Developer <br>
-                            Based in Bengaluru <br>
+                            Hi, I'm Gauri Prasad <br>
+                            Business Analytics Student <br>
+                            Based in Lavasa, Pune <br>
                         </h1>
                         <div class="home__blob grid">
                             <div class="home__perfil">
@@ -115,9 +115,9 @@
                                 BIOGRAPHY
                             </h3>
                             <p class="home__info-description">
-                                Hi, I'm Kritik, Software Developer.
-                                Passionate about solving algorithmic problems
-                                and building software. Based in Bengaluru.
+                                Hi, I'm Gauri Prasad, Business Analytics Student.
+                                Passionate about Marketing
+                                and Analytics. Based in Lavasa, Pune.
                             </p>
                         </div>
                         <div>
@@ -125,9 +125,9 @@
                                 CONTACT
                             </h3>
                             <p class="home__info-description">
-                                Bengaluru, India <br>
-                                kritikmodi@gmail.com <br>
-                                +91-7985397630 <br>
+                                Lavasa, Pune, India <br>
+                                charuprasad11@gmail.com <br>
+                                +91-8123002923 <br>
                             </p>
                         </div>
                         <div>
@@ -148,7 +148,7 @@
                                 GRADUATING IN
                             </h3>
                             <p class="home__info-number">
-                                2023
+                                2024
                             </p>
                         </div>
                         <div>
